objects/Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Cause__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cause</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>LineNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StackTrace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TypeName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TypeName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Error Log</label>
    <nameField>
        <displayFormat>ErrLog-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Cause__c</columns>
        <columns>LineNumber__c</columns>
        <columns>Message__c</columns>
        <columns>TypeName__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>